# insilico-pcr

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  __init__.py  api.py  cli.py  publish_to_github.ps1  pyproject.toml  requirements.txt  setup.py
assets/screenshots/: README.md
benchmarking/: example_reference.json  metrics.py  runner.py
benchmarks/: benchmark_results.json  runtime_comparison.csv
benchmarks/figures/: README.md  generate_figures.py
data/: example_primers.json  generate_example_genome.py
demo/: example_genome.fa  run_demo.sh
demo/expected_output/: results.json
docs/: architecture.md  benchmarking.md  dashboard.md  faq.md  indexing.md  scoring.md  thermodynamics.md
examples/: basic_api_usage.py
modules/: __init__.py  amplicon.py  binding_eval.py  binding_search.py  genome_index.py  genome_index_fm.py  input_handler.py  offtarget.py  output_handler.py  pairing_engine.py  preprocessor.py  scoring.py  thermodynamics.py
modules/advanced/: __init__.py  degenerate.py  hairpin.py  multiplex.py  primer_dimer.py
tests/: test_advanced.py  test_benchmarking.py  test_binding_search.py  test_dimer_dg.py  test_fm_index.py  test_genome_index.py  test_input_handler.py  test_integration.py  test_mismatch_thermodynamics.py  test_pairing_scoring.py  test_salt_mg.py  test_thermodynamics.py
webapp/: app.py  run.py
webapp/routes/: export_api.py  pcr_api.py
webapp/static/css/: main.css
webapp/static/js/: alignment.js  dashboard.js  plots.js
webapp/templates/: index.html
