[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name        = "insilico-pcr"
version     = "1.2.0"
description = "Research-grade in-silico PCR simulation with NN thermodynamics, FM-index search, and interactive dashboard"
readme      = "README.md"
license     = { text = "MIT" }
requires-python = ">=3.10"

authors = [
  { name = "Niraj", email = "niraj_20254009@students.iisertirupati.ac.in" },
]

keywords = [
  "bioinformatics", "PCR", "primer-design", "thermodynamics",
  "nearest-neighbor", "in-silico", "genomics",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Chemistry",
]

dependencies = [
  "biopython>=1.80",
  "numpy>=1.24",
  "scipy>=1.10",
  "fastapi>=0.100",
  "uvicorn>=0.22",
  "jinja2>=3.1",
  "python-multipart>=0.0.6",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.1",
]

[project.urls]
Homepage      = "https://github.com/yourusername/insilico-pcr"
Documentation = "https://github.com/yourusername/insilico-pcr/tree/main/docs"
"Bug Tracker" = "https://github.com/yourusername/insilico-pcr/issues"

[project.scripts]
insilico-pcr = "insilico_pcr.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.ruff]
line-length    = 100
target-version = "py310"

[tool.ruff.lint]
select  = ["E", "F", "W", "I"]
ignore  = ["E501"]
